# zephyr-kit

./: cmake_fixed.py
components/: CMakeLists.txt  Kconfig
project_wkpace/: CMakeLists.txt  Makefile  README.rst  download.jlink  empty.c  gdbx.sh  prj.conf  west.yml
project_wkpace/application/: CMakeLists.txt  fatfs_unit_test.c
project_wkpace/application/demo_guix_smart_watch/: CMakeLists.txt  demo_guix_smart_watch.c
project_wkpace/application/sensor_testsuites/: CMakeLists.txt  lis2dh_unit_test.c
project_wkpace/boards/: iwatchv0.conf
project_wkpace/cmake/: CMakeCache.txt  debugger.cmake  module.cmake  proto.cmake
project_wkpace/gui/: CMakeLists.txt  Kconfig
project_wkpace/gui/demo_guix_smart_watch/: demo_guix_smart_watch.c
project_wkpace/gui/honbow_watch/: CMakeLists.txt  app_compass_window.c  app_list_define.c  app_list_define.h  app_list_style_grid_view.c  app_list_window.c  control_center_window.c  demo_guix_main.c  guix_simple_resources.h  guix_simple_specifications.c  guix_simple_specifications.h  home_window.c  home_window.h  wf_list_window.c  wf_window.c
project_wkpace/gui/honbow_watch/app_sports/: app_sport_data_window.c  app_sport_paused_window.c  app_sport_start_window.c  sport_time_short_window.c
project_wkpace/gui/honbow_watch/utils/: custom_icon_utils.c  custom_icon_utils.h  custom_pixelmap_mirror.c
project_wkpace/gui/watch_face/: CMakeLists.txt  demo_guix_main.c  guix_simple_resources.c  guix_simple_resources.h  guix_simple_specifications.c  guix_simple_specifications.h
project_wkpace/testsuite/: CMakeLists.txt  Kconfig
(+584 files in other folders)
